[package]
name = "mcdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding = { version = "3.0.4" }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
threadpool = "1.8.1"
tokio = { version = "1.28.2", features = ["full"] }
uuid = "1.3.3"
